--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -31,4 +31,8 @@
     flex-direction: column;
     align-items: center;
   }
+
+  .homePage {
+    margin: 0 10%;
+  }
 }
